# TheShittyDarkProject

./: .gitignore  01-creating-window.cpp  02-hello-triangle.cpp  CMakeLists.txt  basic-type-aliases.hpp  glad.c  glad.h  main.cc  main.cpp  openglpp.cc  openglpp.hpp  shader.vert
02-hello-triangle/: CMakeLists.txt  main.cpp
glow/: CMakeLists.txt  basic-types.hpp  buffer.cc  buffer.hpp  core.hpp  error.cc  error.hpp  loader.cc  loader.hpp  screen-cleaner.cc  screen-cleaner.hpp  shader-program.cc  shader-program.hpp  shader.cc  shader.hpp  texture.cc  texture.hpp  uniform.cc  uniform.hpp  utility.cc  utility.hpp
glow/glad/: CMakeLists.txt
glow/glad/src/: glad.c
shaders/: shader.frag  shader.vert  shader1.frag  shader1.vert  shader2.frag
